syntax = "proto3";
package wafie.v1;

enum DataTypeId{
  DATA_TYPE_ID_UNSPECIFIED = 0;
  DATA_TYPE_ID_PROTECTION = 1;
}

message GetDataVersionRequest{
  DataTypeId type_id = 1;
}

message GetDataVersionResponse{
  DataTypeId type_id = 1;
  string version_id = 2;
}

service DataVersionService {
  rpc GetDataVersion(GetDataVersionRequest) returns (GetDataVersionResponse);
}